native/bridge/include/jpdfium.h

// Remove all REDACT annotations from the page (undo all marks).
JPDFIUM_EXPORT int32_t jpdfium_annot_clear_redacts(int64_t page) JPDFIUM_NOEXCEPT;
// Commit phase: burn all REDACT annotations on the page using Object Fission.
// This permanently removes content under each REDACT rect and regenerates the
// content stream.  Handles ALL page object types:
//   - Text:    character-level fission (splits text objects, removes only chars
//              inside redaction rects; 3 encoding strategies: Unicode, FreeType
//              GID, WinAnsi)
//   - Image:   overlap-based removal (>70% overlap threshold)
//   - Path:    subpath-level granularity (decomposes into subpaths at MoveTo
//              boundaries, removes redacted subpaths, rebuilds survivors with
//              visual properties preserved)
//   - Shading: bbox-based removal when fully contained in a redaction rect
//   - Form:    recursive descent into Form XObjects with matrix concatenation;
//              removes fully-overlapping forms or individually redacts children
// Paints filled rectangles, removes consumed annotations.  The document handle
// remains valid - no reload required.
// Returns the number of REDACT annotations that were committed in *commitCount.
JPDFIUM_EXPORT int32_t jpdfium_redact_commit(int64_t page, uint32_t argb, int32_t remove_content,
                                             int32_t* commitCount) JPDFIUM_NOEXCEPT;
// JSON report of the last mandatory sanitize stage (qpdf pass) on a
// redacted save. Caller frees with jpdfium_free_string. Returns "" (empty
// string) when no sanitize has run.
JPDFIUM_EXPORT int32_t jpdfium_doc_sanitize_report(int64_t doc, char** json) JPDFIUM_NOEXCEPT;
// Incremental save: writes only changed objects, document stays live.
JPDFIUM_EXPORT int32_t jpdfium_doc_save_incremental(int64_t doc, uint8_t** data,
                                                    int64_t* len) JPDFIUM_NOEXCEPT;
// Compile a PCRE2 pattern with optional JIT optimization.
// flags: combination of JPDFIUM_PCRE2_* flags (UTF|UCP recommended for multilingual).
// Returns compiled pattern handle via *handle.
JPDFIUM_EXPORT int32_t jpdfium_pcre2_compile(const char* pattern, uint32_t flags, int64_t* handle);
// Find all non-overlapping matches of a compiled pattern in text.
// Returns JSON: [{"start":0,"end":5,"match":"Hello"}, ...]
JPDFIUM_EXPORT int32_t jpdfium_pcre2_match_all(int64_t pattern_handle, const char* text,
                                               char** json_result);
// Free a compiled PCRE2 pattern.
JPDFIUM_EXPORT void jpdfium_pcre2_free(int64_t pattern_handle);