jpdfium/src/main/java/stirling/software/jpdfium/panama/JpdfiumH.java


    /**
     * {@snippet lang=c :
     * int32_t jpdfium_annot_clear_redacts(int64_t page)
     * }
     */
    public static int jpdfium_annot_clear_redacts(long page) {
        var mh$ = jpdfium_annot_clear_redacts.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_annot_clear_redacts", page);
            }
            return (int)mh$.invokeExact(page);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_redact_commit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_redact_commit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_commit(int64_t page, uint32_t argb, int32_t remove_content, int32_t *commitCount)
     * }
     */
    public static FunctionDescriptor jpdfium_redact_commit$descriptor() {
        return jpdfium_redact_commit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_commit(int64_t page, uint32_t argb, int32_t remove_content, int32_t *commitCount)
     * }
     */
    public static MethodHandle jpdfium_redact_commit$handle() {
        return jpdfium_redact_commit.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_commit(int64_t page, uint32_t argb, int32_t remove_content, int32_t *commitCount)
     * }
     */
    public static MemorySegment jpdfium_redact_commit$address() {
        return jpdfium_redact_commit.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_redact_commit(int64_t page, uint32_t argb, int32_t remove_content, int32_t *commitCount)
     * }
     */
    public static int jpdfium_redact_commit(long page, int argb, int remove_content, MemorySegment commitCount) {
        var mh$ = jpdfium_redact_commit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_redact_commit", page, argb, remove_content, commitCount);
            }
            return (int)mh$.invokeExact(page, argb, remove_content, commitCount);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_sanitize_report {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_sanitize_report");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_sanitize_report(int64_t doc, char **json)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_sanitize_report$descriptor() {
        return jpdfium_doc_sanitize_report.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_sanitize_report(int64_t doc, char **json)
     * }
     */
    public static MethodHandle jpdfium_doc_sanitize_report$handle() {
        return jpdfium_doc_sanitize_report.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_sanitize_report(int64_t doc, char **json)
     * }
     */
    public static MemorySegment jpdfium_doc_sanitize_report$address() {
        return jpdfium_doc_sanitize_report.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_sanitize_report(int64_t doc, char **json)
     * }
     */
    public static int jpdfium_doc_sanitize_report(long doc, MemorySegment json) {
        var mh$ = jpdfium_doc_sanitize_report.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_sanitize_report", doc, json);
            }
            return (int)mh$.invokeExact(doc, json);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_doc_save_incremental {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_doc_save_incremental");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save_incremental(int64_t doc, uint8_t **data, int64_t *len)
     * }
     */
    public static FunctionDescriptor jpdfium_doc_save_incremental$descriptor() {
        return jpdfium_doc_save_incremental.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save_incremental(int64_t doc, uint8_t **data, int64_t *len)
     * }
     */
    public static MethodHandle jpdfium_doc_save_incremental$handle() {
        return jpdfium_doc_save_incremental.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save_incremental(int64_t doc, uint8_t **data, int64_t *len)
     * }
     */
    public static MemorySegment jpdfium_doc_save_incremental$address() {
        return jpdfium_doc_save_incremental.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_doc_save_incremental(int64_t doc, uint8_t **data, int64_t *len)
     * }
     */
    public static int jpdfium_doc_save_incremental(long doc, MemorySegment data, MemorySegment len) {
        var mh$ = jpdfium_doc_save_incremental.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_doc_save_incremental", doc, data, len);
            }
            return (int)mh$.invokeExact(doc, data, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_pcre2_compile {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_pcre2_compile");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_pcre2_compile(const char *pattern, uint32_t flags, int64_t *handle)
     * }
     */
    public static FunctionDescriptor jpdfium_pcre2_compile$descriptor() {
        return jpdfium_pcre2_compile.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_pcre2_compile(const char *pattern, uint32_t flags, int64_t *handle)
     * }
     */
    public static MethodHandle jpdfium_pcre2_compile$handle() {
        return jpdfium_pcre2_compile.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_pcre2_compile(const char *pattern, uint32_t flags, int64_t *handle)
     * }
     */
    public static MemorySegment jpdfium_pcre2_compile$address() {
        return jpdfium_pcre2_compile.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_pcre2_compile(const char *pattern, uint32_t flags, int64_t *handle)
     * }
     */
    public static int jpdfium_pcre2_compile(MemorySegment pattern, int flags, MemorySegment handle) {
        var mh$ = jpdfium_pcre2_compile.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_pcre2_compile", pattern, flags, handle);
            }
            return (int)mh$.invokeExact(pattern, flags, handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_pcre2_match_all {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_pcre2_match_all");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_pcre2_match_all(int64_t pattern_handle, const char *text, char **json_result)
     * }
     */
    public static FunctionDescriptor jpdfium_pcre2_match_all$descriptor() {
        return jpdfium_pcre2_match_all.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_pcre2_match_all(int64_t pattern_handle, const char *text, char **json_result)
     * }
     */
    public static MethodHandle jpdfium_pcre2_match_all$handle() {
        return jpdfium_pcre2_match_all.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_pcre2_match_all(int64_t pattern_handle, const char *text, char **json_result)
     * }
     */
    public static MemorySegment jpdfium_pcre2_match_all$address() {
        return jpdfium_pcre2_match_all.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_pcre2_match_all(int64_t pattern_handle, const char *text, char **json_result)
     * }
     */
    public static int jpdfium_pcre2_match_all(long pattern_handle, MemorySegment text, MemorySegment json_result) {
        var mh$ = jpdfium_pcre2_match_all.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_pcre2_match_all", pattern_handle, text, json_result);
            }
            return (int)mh$.invokeExact(pattern_handle, text, json_result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_pcre2_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_pcre2_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void jpdfium_pcre2_free(int64_t pattern_handle)
     * }
     */
    public static FunctionDescriptor jpdfium_pcre2_free$descriptor() {
        return jpdfium_pcre2_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void jpdfium_pcre2_free(int64_t pattern_handle)
     * }
     */
    public static MethodHandle jpdfium_pcre2_free$handle() {
        return jpdfium_pcre2_free.HANDLE;
    }
